{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 13,
  "lineage": "ff1be2a6-b9d6-811e-a963-f7a79dfeb284",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3a440bbcff3d043",
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:instance/i-0384bea6123d4c1e5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0384bea6123d4c1e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0221725a20408bd23",
            "private_dns": "ip-192-168-10-130.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.10.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00bcb312f90f7aaea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cedf4388fdf3b8d4",
            "tags": {
              "Name": "csk-instance"
            },
            "tags_all": {
              "Name": "csk-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073e2fe3671cc10cb"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.instance_sg",
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_route_association",
            "module.vpc.aws_route_table_association.public_subnet_route_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:security-group/sg-073e2fe3671cc10cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073e2fe3671cc10cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231228073116531100000002",
            "name_prefix": "terraform-",
            "owner_id": "351377430522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "csk-instance-sg"
            },
            "tags_all": {
              "Name": "csk-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5498538df3f290b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_route_association",
            "module.vpc.aws_route_table_association.public_subnet_route_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076dd21b3ff163dd9",
            "domain": "vpc",
            "id": "eipalloc-076dd21b3ff163dd9",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-37-146.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.37.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:internet-gateway/igw-0c2ce4ff3f3511af3",
            "id": "igw-0c2ce4ff3f3511af3",
            "owner_id": "351377430522",
            "tags": {
              "Name": "csk-vpc-igw"
            },
            "tags_all": {
              "Name": "csk-vpc-igw"
            },
            "vpc_id": "vpc-0a5498538df3f290b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076dd21b3ff163dd9",
            "association_id": "eipassoc-0d61d2fb4af1d0169",
            "connectivity_type": "public",
            "id": "nat-00552d62f14d6b23c",
            "network_interface_id": "eni-08f5da0a4a14918c5",
            "private_ip": "192.168.0.84",
            "public_ip": "3.36.37.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0489065e836197a9a",
            "tags": {
              "Name": "csk-vpc-nat-gateway-a"
            },
            "tags_all": {
              "Name": "csk-vpc-nat-gateway-a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:route-table/rtb-0c82926789b7a2a88",
            "id": "rtb-0c82926789b7a2a88",
            "owner_id": "351377430522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00552d62f14d6b23c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "csk-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "csk-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5498538df3f290b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:route-table/rtb-025881ef79784cf44",
            "id": "rtb-025881ef79784cf44",
            "owner_id": "351377430522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2ce4ff3f3511af3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "csk-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "csk-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5498538df3f290b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04022f8e1d5d57cd8",
            "route_table_id": "rtb-0c82926789b7a2a88",
            "subnet_id": "subnet-0cedf4388fdf3b8d4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bea7de0944e6703",
            "route_table_id": "rtb-025881ef79784cf44",
            "subnet_id": "subnet-0489065e836197a9a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:subnet/subnet-0cedf4388fdf3b8d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cedf4388fdf3b8d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351377430522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csk-vpc-private-subnet-a"
            },
            "tags_all": {
              "Name": "csk-vpc-private-subnet-a"
            },
            "vpc_id": "vpc-0a5498538df3f290b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubilc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:subnet/subnet-0489065e836197a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0489065e836197a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "351377430522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csk-vpc-public-subnet-a"
            },
            "tags_all": {
              "Name": "csk-vpc-public-subnet-a"
            },
            "vpc_id": "vpc-0a5498538df3f290b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:vpc/vpc-0a5498538df3f290b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d2da1e4a5f8226bb",
            "default_route_table_id": "rtb-0b884dfd44d1fad50",
            "default_security_group_id": "sg-02d0c73aaa02ad86e",
            "dhcp_options_id": "dopt-0b6829d2ac56644f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5498538df3f290b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b884dfd44d1fad50",
            "owner_id": "351377430522",
            "tags": {
              "Name": "csk-vpc"
            },
            "tags_all": {
              "Name": "csk-vpc"
            }
          }
        }
      ]
    }
  ]
}